--- a/index.html
+++ b/index.html
@@ -1,6 +1,63 @@
 ---
 layout: default
+css: index
 ---
-<div class="container_perso">
-test
-</div>
+
+{% include nav.html %}
+
+<div class="home-main">
+  <div class="box-title">
+    <h1>Développeur Web</h1>
+    <div class="text">
+      <p>Développeur web “full stack” en freelance dans le Nord,
+        je suis à votre disposition pour vous aider dans la réalisation de vos projets.
+        J'allie front-end et back-end et suis également formé sur les aspects marketing:
+        tel que le référencement (SEO), l’ergonomie et le design, la data analyse…<h2>
+        </p>
+      </div>
+    </div>
+    <div class="box-chevron">
+      <a class="scollTo chevron-a" href="#apropos"><i class="fa fa-angle-down chevron"></i></a>
+    </div>
+  </div>
+
+  <div class="container-perso">
+
+    <div class="section">
+      <h2 id="apropos">Un développeur web passionné</h2>
+      <p>
+        L’auto-entreprise Maxime Herbaut est formée d’un étudiant en ingénierie
+        généraliste à l’Iteem spécialisé dans la <strong>programmation web</strong> et le
+        <strong>développement de sites internet</strong>.
+      </p>
+
+      <p>
+        Je suis à l’origine de plusieurs projets de sites (vitrine, e-commerce, blog…)
+        et d’applications internes présents et utilisés sur la toile.
+      </p>
+
+      <p>
+        Dans le cadre de mes études et de mes stages, je suis au cœur des dernières
+        innovations des technologies web, et je peux proposer des services complets
+        et personnalisés selon les demandes.
+      </p>
+    </div>
+
+    <div class="section">
+      <h2 id="apropos">Je développe vos sites webs</h2>
+      <p>
+      Développement personnalisé, amélioration ou audit de votre site vitrine,
+      site e-commerce ou blog ainsi que d’applications internes pour automatiser vos processus.
+      </p>
+      <div class="row">
+        <div class="md-3">
+<i class="fa fa-shopping-cart"></i>
+<p>Site e-commerce</p>
+        </div>
+
+      </div>
+
+    </div>
+
+
+  </div>
