--- a/index.html
+++ b/index.html
@@ -3,7 +3,29 @@ layout: default
 css: index
 ---
 
-{% include nav.html %}
+<!-- navbar -->
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand scrollTo" href="{% if page.url == '/' %}#top{% else %}{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}{% endif %}">Maxime Herbaut</a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a class="scrollTo" href="#apropos"><i class="fa fa-user icon-nav"></i> A propros</a></li>
+        <li><a class="scrollTo" href="#services"><i class="fa fa-desktop icon-nav"></i> Services</a></li>
+        <li><a class="scrollTo" href="#portfolio"><i class="fa fa-suitcase icon-nav"></i> Portfolio</a></li>
+        <li><a data-toggle="modal" data-target="#myModal" class="cursor"><strong><i class="fa fa-envelope-o icon-nav"></i> Contact</strong></a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <div class="home-main">
   <div class="box-title">
@@ -17,7 +39,7 @@ css: index
       </div>
     </div>
     <div class="box-chevron">
-      <a class="scollTo chevron-a" href="#apropos"><i class="fa fa-angle-down chevron"></i></a>
+      <a class="scrollTo chevron-a" href="#apropos"><i class="fa fa-angle-down chevron"></i></a>
     </div>
   </div>
 
@@ -27,37 +49,151 @@ css: index
       <h2 id="apropos">Un développeur web passionné</h2>
       <p>
         L’auto-entreprise Maxime Herbaut est formée d’un étudiant en ingénierie
-        généraliste à l’Iteem spécialisé dans la <strong>programmation web</strong> et le
+        généraliste à l’<a href="http://iteem.ec-lille.fr/">Iteem</a>
+        spécialisé dans la <strong>programmation web</strong> et le
         <strong>développement de sites internet</strong>.
       </p>
 
       <p>
-        Je suis à l’origine de plusieurs projets de sites (vitrine, e-commerce, blog…)
+        Je suis à l’origine de plusieurs <strong>projets de sites</strong> (vitrine, e-commerce, blog…)
         et d’applications internes présents et utilisés sur la toile.
       </p>
 
       <p>
         Dans le cadre de mes études et de mes stages, je suis au cœur des dernières
-        innovations des technologies web, et je peux proposer des services complets
-        et personnalisés selon les demandes.
-      </p>
-    </div>
+        innovations des <strong>technologies web</strong>, et je peux proposer des <strong>services complets
+          et personnalisés</strong> selon les demandes.
+        </p>
+        <img src="{{ "/image/maximeherbaut.jpg" | prepend: site.baseurl }}" alt="Maxime Herbaut" class="img-circle center-block m" width="200px">
+      </div>
 
-    <div class="section">
-      <h2 id="apropos">Je développe vos sites webs</h2>
-      <p>
-      Développement personnalisé, amélioration ou audit de votre site vitrine,
-      site e-commerce ou blog ainsi que d’applications internes pour automatiser vos processus.
-      </p>
-      <div class="row">
-        <div class="md-3">
-<i class="fa fa-shopping-cart"></i>
-<p>Site e-commerce</p>
+      <div class="section">
+        <h2 id="services">Je développe vos sites webs</h2>
+        <p>
+          Je développe de façon personnalisé et améliore votre <strong>site vitrine</strong>,
+          <strong>site e-commerce</strong> ou <strong>blog</strong> ainsi que
+          vos <strong>applications internes</strong> pour automatiser vos processus.
+        </p>
+        <div class="row sous-section">
+          <div class="col-sm-3 col-xs-6 text-center box-card">
+            <div class="box-icon">
+              <i class="fa fa-eye"></i>
+            </div>
+            <p>Site vitrine</p>
+          </div>
+          <div class="col-sm-3 col-xs-6 text-center box-card">
+            <div class="box-icon">
+              <i class="fa fa-shopping-cart"></i>
+            </div>
+            <p>Site e-commerce</p>
+          </div>
+          <div class="col-sm-3 col-xs-6 text-center box-card">
+            <div class="box-icon">
+              <i class="fa fa-pencil"></i>
+            </div>
+            <p>Blog</p>
+          </div>
+          <div class="col-sm-3 col-xs-6 text-center box-card">
+            <div class="box-icon">
+              <i class="fa fa-tachometer"></i>
+            </div>
+            <p>Application</p>
+          </div>
         </div>
+
+        <div class="row sous-section">
+          <div class="col-sm-3 text-center">
+            <div class="box-icon">
+              <i class="fa fa-desktop"></i>
+            </div>
+            <p>Responsive design</p>
+          </div>
+          <div class="col-sm-9">
+            <p>
+              Je porte une attention particulière au design afin qu’il corresponde
+              à l’aire du temps et soit <strong>Web-responsive</strong>, c’est à dire qu’il
+              s’adapte à l’appareil avec lequel il est ouvert (ordinateur de bureau, tablette, smartphone).
+            </p>
+          </div>
+        </div>
+
+        <div class="row sous-section">
+          <div class="col-sm-3 text-center">
+            <div class="box-icon">
+              <i class="fa fa-search"></i>
+            </div>
+            <p>SEO</p>
+          </div>
+          <div class="col-sm-9">
+            <p>
+              J'utilise les bonnes pratiques <strong>SEO</strong> (Search Engine Optimization) afin
+              d'optimiser le <strong>référencement naturel</strong> du site sur les
+              moteurs de recherche (Google, Bing, Yahoo).
+            </p>
+          </div>
+
+        </div>
+
+        <div class="row sous-section">
+          <div class="col-sm-3 text-center">
+            <div class="box-icon">
+              <i class="fa fa-line-chart"></i>
+            </div>
+            <p>Data analyse</p>
+          </div>
+          <div class="col-sm-9">
+            <p>
+              Le site sera livré lié à un comptes <strong>Google Analytics</strong>
+              (analyse des visites et de la fréquentation du site. Un plan de
+              taggage personnalisé peut également être prévu.
+            </p>
+          </div>
+        </div>
+
+
+        <div class="row sous-section">
+          <div class="col-sm-3 text-center">
+            <div class="box-icon">
+              <i class="fa fa-users"></i>
+            </div>
+            <p>UX Design</p>
+          </div>
+          <div class="col-sm-9">
+            <p>
+              Le site est developpé de manière à offrir la meilleure <strong>expérience à l'utilisateur</strong> (UX = User eXperience).
+            </p>
+          </div>
+
+        </div>
+
+        <div class="section">
+          <h2 id="portfolio">Les réalisations web</h2>
+
+
+
+          </div>
+
+
 
       </div>
 
     </div>
 
 
-  </div>
+    <div class="modal fade" id="myModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Modal title</h4>
+          </div>
+          <div class="modal-body">
+            <p>One fine body&hellip;</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
