fixed collapse navbar

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@ css: index
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a class="scrollTo" href="#apropos"><i class="fa fa-user icon-nav"></i> A propros</a></li>
-        <li><a class="scrollTo" href="#services"><i class="fa fa-desktop icon-nav"></i> Services</a></li>
-        <li><a class="scrollTo" href="#portfolio"><i class="fa fa-suitcase icon-nav"></i> Portfolio</a></li>
-        <li><a data-toggle="modal" data-target="#myModal" class="cursor"><strong><i class="fa fa-envelope-o icon-nav"></i> Contact</strong></a></li>
+        <li><a class="scrollTo close-nav" href="#apropos" ><i class="fa fa-user icon-nav"></i> A propros</a></li>
+        <li><a class="scrollTo close-nav" href="#services"><i class="fa fa-desktop icon-nav"></i> Services</a></li>
+        <li><a class="scrollTo close-nav" href="#portfolio"><i class="fa fa-suitcase icon-nav"></i> Portfolio</a></li>
+        <li><a data-toggle="modal" data-target="#myModal" class="cursor close-nav"><strong><i class="fa fa-envelope-o icon-nav"></i> Contact</strong></a></li>
       </ul>
     </div>
   </div>
