--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ css: index
                 <label for="InputArea">Votre message</label>
                 <textarea class="form-control" rows="5" name="message" required="required" placeholder="Entrez votre message..."></textarea>
               </div>
-              <input type="hidden" name="_next" value="{{ site.url }}?message=ok" />
+              <input type="hidden" name="_next" value="?message=ok" />
             </div>
             <div class="modal-footer">
                       <button type="submit" class="btn btn-default send"><i class="fa fa-paper-plane send-icon"></i> Envoyer votre message</button>
