--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ css: index
       <ul class="nav navbar-nav navbar-right">
         <li><a class="scrollTo close-nav" href="#apropos" ><i class="fa fa-user icon-nav"></i> A propros</a></li>
         <li><a class="scrollTo close-nav" href="#services"><i class="fa fa-desktop icon-nav"></i> Services</a></li>
-        <li><a class="scrollTo close-nav" href="#portfolio"><i class="fa fa-suitcase icon-nav"></i> Portfolio</a></li>
+        <!--<li><a class="scrollTo close-nav" href="#portfolio"><i class="fa fa-suitcase icon-nav"></i> Portfolio</a></li>-->
         <li><a data-toggle="modal" data-target="#myModal" class="cursor close-nav"><strong><i class="fa fa-envelope-o icon-nav"></i> Contact</strong></a></li>
       </ul>
     </div>
@@ -173,12 +173,11 @@ css: index
 
         </div>
 
+<!--
         <div class="section">
           <h2 id="portfolio">Les réalisations web</h2>
-
-
-
         </div>
+        -->
 
 
 
