--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ css: index
     <div class="section">
       <h2 id="apropos">Un développeur web passionné</h2>
       <p>
-        L’auto-entreprise Maxime Herbaut est formée d’un étudiant en ingénierie
-        généraliste à l’<a href="http://iteem.ec-lille.fr/">Iteem</a>
-        spécialisé dans la <strong>programmation web</strong> et le
+        Etudiant ingénieur généraliste à l’<a href="http://iteem.ec-lille.fr/">Iteem</a>, 
+        j'ai créé l'auto entreprise Maxime Herbaut pour mettre mes compétences et mes connaissances 
+        au service de votre entreprise. Je suis spécialisé dans la <strong>programmation web</strong> et le
         <strong>développement de sites internet</strong>.
       </p>
 
