--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ css: index
       <ul class="nav navbar-nav navbar-right">
         <li><a class="scrollTo close-nav" href="#apropos" ><i class="fa fa-user icon-nav"></i> A propros</a></li>
         <li><a class="scrollTo close-nav" href="#services"><i class="fa fa-desktop icon-nav"></i> Services</a></li>
-        <!--<li><a class="scrollTo close-nav" href="#portfolio"><i class="fa fa-suitcase icon-nav"></i> Portfolio</a></li>-->
+        <li><a class="scrollTo close-nav" href="#portfolio"><i class="fa fa-suitcase icon-nav"></i> Portfolio</a></li>
         <li><a data-toggle="modal" data-target="#myModal" class="cursor close-nav"><strong><i class="fa fa-envelope-o icon-nav"></i> Contact</strong></a></li>
       </ul>
     </div>
@@ -55,8 +55,8 @@ css: index
     <div class="section">
       <h2 id="apropos">Un développeur web passionné</h2>
       <p>
-        Etudiant ingénieur généraliste à l’<a href="http://iteem.ec-lille.fr/">Iteem</a>, 
-        j'ai créé l'auto entreprise Maxime Herbaut pour mettre mes compétences et mes connaissances 
+        Etudiant ingénieur généraliste à l’<a href="http://iteem.ec-lille.fr/">Iteem</a>,
+        j'ai créé l'auto entreprise Maxime Herbaut pour mettre mes compétences et mes connaissances
         au service de votre entreprise. Je suis spécialisé dans la <strong>programmation web</strong> et le
         <strong>développement de sites internet</strong>.
       </p>
@@ -170,19 +170,38 @@ css: index
               Le site est developpé de manière à offrir la meilleure <strong>expérience à l'utilisateur</strong> (UX = User eXperience).
             </p>
           </div>
-
         </div>
-
-<!--
-        <div class="section">
-          <h2 id="portfolio">Les réalisations web</h2>
-        </div>
-        -->
-
-
-
       </div>
 
+
+        <div class="section">
+          <h2 id="portfolio">Les réalisations web</h2>
+
+        </div>
+
+    <div class="row">
+      <div class="col-sm-6 real">
+        <a href="http://villa-finder.com" target="_blank">
+        <img src="{{ "/image/villa-finder.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Villa-finder.com">
+      </a>
+    </div>
+      <div class="col-sm-6 real">
+        <a href="http://villa-finder.com" target="_blank">
+        <img src="{{ "/image/villa-finder.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Villa-finder.com">
+      </a>
+      </div>
+      <div class="col-sm-6 real">
+        <a href="http://villa-finder.com" target="_blank">
+        <img src="{{ "/image/villa-finder.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Villa-finder.com">
+      </a>
+      </div>
+      <div class="col-sm-6 real">
+        <a href="http://villa-finder.com" target="_blank">
+        <img src="{{ "/image/villa-finder.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Villa-finder.com">
+      </a>
+      </div>
+
+    </div>
     </div>
 
 
