--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ css: index
 ---
 <div class="alert alert-warning alert-dismissible" role="alert" id="alert">
   <div class="container">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true" class="croix">&times;</span></button>
-  Votre message a bien été envoyé, je vous repondrai dans les plus brefs délais.
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true" class="croix">&times;</span></button>
+    Votre message a bien été envoyé, je vous repondrai dans les plus brefs délais.
   </div>
 </div>
 
@@ -174,36 +174,71 @@ css: index
       </div>
 
 
-        <div class="section">
-          <h2 id="portfolio">Les réalisations web</h2>
+      <div class="section">
+        <h2 id="portfolio">Les réalisations web</h2>
+        <p>
+          Voici quelques <strong>sites internet</strong> que j'ai réalisé pour
+          mes clients. J'utilise différentes téchnologies qui sont des standards
+          à l'heure actuelle :
+        </p>
+        <ul class="techno">
+          <li>Pour le <strong>back-end</strong> (côté serveur) : Le framework PHP5 Symfony2, MySQL</li>
+          <li>Pour le <strong>front-end</strong> (coté client): HTML5, CSS3, bootstrap3, jQuery, AngularJs</li>
+          <li>Pour le <strong>e-marketing</strong> : Google Analytics, Adwords, Webmaster Tool; Bing Webmaster Tool</li>
+        </ul>
+      </div>
 
+      <div class="row">
+        <div class="col-sm-6 real">
+          <a href="http://seminyak-villa.com/" target="_blank">
+            <div class="view view-first">
+              <img src="{{ "/image/seminyak-villa.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Seminyak-villa.com"/>
+              <div class="mask">
+                <h4>Seminyak-villa.com</h4>
+                <p>Site e-commerce - AngularJs, Symfony2 & ElasticSearch</p>
+                <div class="info">Voir</div>
+              </div>
+            </div>
+          </a>
         </div>
-
-    <div class="row">
-      <div class="col-sm-6 real">
-        <a href="http://villa-finder.com" target="_blank">
-        <img src="{{ "/image/villa-finder.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Villa-finder.com">
-      </a>
-    </div>
-      <div class="col-sm-6 real">
-        <a href="http://villa-finder.com" target="_blank">
-        <img src="{{ "/image/villa-finder.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Villa-finder.com">
-      </a>
+        <div class="col-sm-6 real">
+          <a href="http://yakside.com" target="_blank">
+            <div class="view view-first">
+              <img src="{{ "/image/yakside.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="yakside.com"/>
+              <div class="mask">
+                <h4>Yakside.com</h4>
+                <p>Site vitrine - Bootstrap3, HTML5 & CSS3</p>
+                <div class="info">Voir</div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm-6 real">
+          <a href="http://numerologie-yvonne.com/" target="_blank">
+            <div class="view view-first">
+              <img src="{{ "/image/numerologie.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="numerologie-yvonne.com"/>
+              <div class="mask">
+                <h4>Numérologie-yvonne.com</h4>
+                <p>Site vitrine - Symfony2 & Bootstrap3</p>
+                <div class="info">Voir</div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm-6 real">
+          <a href="http://guide.villa-bali.com" target="_blank">
+            <div class="view view-first">
+              <img src="{{ "/image/guide.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="guide.villa-bali.com"/>
+              <div class="mask">
+                <h4>guide.villa-bali.com</h4>
+                <p>Blog sur Bali - Symfony2 & Bootstrap3</p>
+                <div class="info">Voir</div>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
-      <div class="col-sm-6 real">
-        <a href="http://villa-finder.com" target="_blank">
-        <img src="{{ "/image/villa-finder.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Villa-finder.com">
-      </a>
-      </div>
-      <div class="col-sm-6 real">
-        <a href="http://villa-finder.com" target="_blank">
-        <img src="{{ "/image/villa-finder.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Villa-finder.com">
-      </a>
-      </div>
-
     </div>
-    </div>
-
 
     <div class="modal fade" id="myModal">
       <div class="modal-dialog">
@@ -229,8 +264,8 @@ css: index
               <input type="hidden" name="_next" value="?message=ok" />
             </div>
             <div class="modal-footer">
-                      <button type="submit" class="btn btn-default send"><i class="fa fa-paper-plane send-icon"></i> Envoyer votre message</button>
-              </form>
+              <button type="submit" class="btn btn-default send"><i class="fa fa-paper-plane send-icon"></i> Envoyer votre message</button>
+            </form>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
