--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ css: index
 
       <div class="row">
         <div class="col-sm-6 real">
-          <a href="http://seminyak-villa.com/" target="_blank">
+          <a href="http://seminyak-villa.com/" rel="nofollow" target="_blank">
             <div class="view view-first">
               <img src="{{ "/image/seminyak-villa.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Seminyak-villa.com"/>
               <div class="mask">
@@ -202,7 +202,7 @@ css: index
           </a>
         </div>
         <div class="col-sm-6 real">
-          <a href="http://yakside.com" target="_blank">
+          <a href="http://yakside.com" rel="nofollow" target="_blank">
             <div class="view view-first">
               <img src="{{ "/image/yakside.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="yakside.com"/>
               <div class="mask">
@@ -214,7 +214,7 @@ css: index
           </a>
         </div>
         <div class="col-sm-6 real">
-          <a href="http://numerologie-yvonne.com/" target="_blank">
+          <a href="http://numerologie-yvonne.com/" rel="nofollow" target="_blank">
             <div class="view view-first">
               <img src="{{ "/image/numerologie.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="numerologie-yvonne.com"/>
               <div class="mask">
@@ -226,7 +226,7 @@ css: index
           </a>
         </div>
         <div class="col-sm-6 real">
-          <a href="http://guide.villa-bali.com" target="_blank">
+          <a href="http://guide.villa-bali.com" rel="nofollow" target="_blank">
             <div class="view view-first">
               <img src="{{ "/image/guide.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="guide.villa-bali.com"/>
               <div class="mask">
