--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ css: index
     <div class="section">
       <h2 id="apropos">Un développeur web passionné</h2>
       <p>
-        Etudiant ingénieur généraliste à l’<a href="http://iteem.ec-lille.fr/">Iteem</a>,
+        Etudiant ingénieur généraliste à l’<a href="http://iteem.ec-lille.fr/" rel="nofollow" target="_blank">Iteem</a>,
         j'ai créé l'auto entreprise Maxime Herbaut pour mettre mes compétences et mes connaissances
         au service de votre entreprise. Je suis spécialisé dans la <strong>programmation web</strong> et le
         <strong>développement de sites internet</strong>.
