fixed mobile deisgn

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ css: index
     <h1>Développeur Web</h1>
     <div class="text">
       <p>Développeur web “full stack” en freelance dans le Nord,
-        je suis à votre disposition pour vous aider dans la réalisation de vos projets.
+        je suis à votre disposition pour vous aider dans la réalisation de vos projets.<span class="text-xs">
         J'allie front-end et back-end et suis également formé sur les aspects marketing:
-        tel que le référencement (SEO), l’ergonomie et le design, la data analyse…<h2>
+        tel que le référencement (SEO), l’ergonomie et le design, la data analyse...</span>
         </p>
       </div>
     </div>
