--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ css: index
       <div class="section">
         <h2 id="services">Je développe vos sites webs</h2>
         <p>
-          Je développe de façon personnalisé et améliore votre <strong>site vitrine</strong>,
+          Je développe de façon personnalisée ou améliore votre <strong>site vitrine</strong>,
           <strong>site e-commerce</strong> ou <strong>blog</strong> ainsi que
           vos <strong>applications internes</strong> pour automatiser vos processus.
         </p>
@@ -150,8 +150,8 @@ css: index
           </div>
           <div class="col-sm-9">
             <p>
-              Le site sera livré lié à un comptes <strong>Google Analytics</strong>
-              (analyse des visites et de la fréquentation du site. Un plan de
+              Le site sera livré lié à un comptes <strong>Google Analytics, </strong>
+              analyse des visites et de la fréquentation du site. Un plan de
               taggage personnalisé peut également être prévu.
             </p>
           </div>
