--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ css: index
           <div class="col-sm-9">
             <p>
               Je porte une attention particulière au design afin qu’il corresponde
-              à l’aire du temps et soit <strong>Web-responsive</strong>, c’est à dire qu’il
+              à l’air du temps et soit <strong>Web-responsive</strong>, c’est à dire qu’il
               s’adapte à l’appareil avec lequel il est ouvert (ordinateur de bureau, tablette, smartphone).
             </p>
           </div>
@@ -150,7 +150,7 @@ css: index
           </div>
           <div class="col-sm-9">
             <p>
-              Le site sera livré lié à un comptes <strong>Google Analytics, </strong>
+              Le site sera livré lié à un compte <strong>Google Analytics, </strong>
               analyse des visites et de la fréquentation du site. Un plan de
               taggage personnalisé peut également être prévu.
             </p>
