--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ css: index
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">Contactez-moi</h4>
+            <h4 class="modal-title">Envoyez-moi votre message ou appelez moi au 06 60 16 07 13</h4>
           </div>
           <form role="form" action="http://formspree.io/maxime-herbaut@orange.fr" id="contactForm" method="post">
             <div class="modal-body">
