--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ css: index
           </a>
         </div>
         <div class="col-sm-6 real">
-          <a href="http://guide.villa-bali.com" rel="nofollow" target="_blank">
+          <a href="http://guide.villa-bali.com/fr" rel="nofollow" target="_blank">
             <div class="view view-first">
               <img src="{{ "/image/guide.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="guide.villa-bali.com"/>
               <div class="mask">
