--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ css: index
       <div class="section">
         <h2 id="portfolio">Les réalisations web</h2>
         <p>
-          Voici quelques <strong>sites internet</strong> que j'ai réalisé pour
+          Voici quelques <strong>sites internet</strong> que j'ai réalisés pour
           mes clients. J'utilise différentes téchnologies qui sont des standards
           à l'heure actuelle :
         </p>
