--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ css: index
       </div>
 
       <div class="section">
-        <h2 id="services">Je développe vos sites webs</h2>
+        <h2 id="services">Je développe vos sites web</h2>
         <p>
           Je développe de façon personnalisée ou améliore votre <strong>site vitrine</strong>,
           <strong>site e-commerce</strong> ou <strong>blog</strong> ainsi que
@@ -152,7 +152,7 @@ css: index
             <p>
               Le site sera livré lié à un compte <strong>Google Analytics, </strong>
               analyse des visites et de la fréquentation du site. Un plan de
-              taggage personnalisé peut également être prévu.
+              tracking personnalisé peut également être prévu.
             </p>
           </div>
         </div>
