added id in form

--- a/index.html
+++ b/index.html
@@ -251,15 +251,15 @@ css: index
             <div class="modal-body">
               <div class="form-group">
                 <label for="InputName">Nom</label>
-                <input type="text" class="form-control" name="name" placeholder="Entrez votre nom" required="required">
+                <input id="InputName" type="text" class="form-control" name="name" placeholder="Entrez votre nom" required="required">
               </div>
               <div class="form-group">
                 <label for="InputEmail">Adresse email</label>
-                <input type="email" class="form-control" name="_replyto" placeholder="Entrez votre adresse" required="required">
+                <input id="InputEmail" type="email" class="form-control" name="_replyto" placeholder="Entrez votre adresse" required="required">
               </div>
               <div class="form-group">
                 <label for="InputArea">Votre message</label>
-                <textarea class="form-control" rows="5" name="message" required="required" placeholder="Entrez votre message..."></textarea>
+                <textarea id="InputArea" class="form-control" rows="5" name="message" required="required" placeholder="Entrez votre message..."></textarea>
               </div>
               <input type="hidden" name="_next" value="?message=ok" />
             </div>
