--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ css: index
 
 <div class="home-main">
   <div class="box-title">
-    <h1>Développeur Web</h1>
+    <h1>Maxime Herbaut</h1>
     <div class="text">
       <p>Développeur web “full stack” en freelance dans le Nord,
         je suis à votre disposition pour vous aider dans la réalisation de vos projets.<span class="text-xs">
