added 2 new projects"

--- a/index.html
+++ b/index.html
@@ -237,6 +237,30 @@ css: index
             </div>
           </a>
         </div>
+        <div class="col-sm-6 real">
+          <a href="http://www.referencement-web.site/comparer-google-bing-interpretation-nofollow/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="follow" target="_blank">
+            <div class="view view-first">
+              <img src="{{ "/image/seo.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Référencement SEO"/>
+              <div class="mask">
+                <h4>Referencement-web.site</h4>
+                <p>Blog sur le SEO - Jekyll</p>
+                <div class="info">Voir</div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm-6 real">
+          <a href="http://www.ocyo-consulting.com?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
+            <div class="view view-first">
+              <img src="{{ "/image/ocyo.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="OCYO Consulting"/>
+              <div class="mask">
+                <h4>OCYO-Consulting.com</h4>
+                <p>Site vitrine entreprise - Symfony2 & Bootstrap3</p>
+                <div class="info">Voir</div>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
 
