--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ css: index
         <li><a class="scrollTo close-nav" href="#apropos" ><i class="fa fa-user icon-nav"></i> A propos</a></li>
         <li><a class="scrollTo close-nav" href="#services"><i class="fa fa-desktop icon-nav"></i> Services</a></li>
         <li><a class="scrollTo close-nav" href="#portfolio"><i class="fa fa-suitcase icon-nav"></i> Portfolio</a></li>
+        <li><a class="scrollTo close-nav" href="#portfolio"><i class="fa fa-pencil icon-nav"></i> Blog</a></li>
         <li><a data-toggle="modal" data-target="#myModal" class="cursor close-nav"><strong><i class="fa fa-envelope-o icon-nav"></i> Contact</strong></a></li>
       </ul>
     </div>
