added new sites in portfolio

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ css: index
     <div class="text">
       <p>Développeur web “full stack” en freelance dans le Nord,
         je suis à votre disposition pour vous aider dans la réalisation de vos projets.<span class="text-xs">
-        J'allie front-end et back-end et suis également formé sur les aspects marketing:
-        tel que le référencement (SEO), l’ergonomie et le design, la data analyse...</span>
+          J'allie front-end et back-end et suis également formé sur les aspects marketing:
+          tel que le référencement (SEO), l’ergonomie et le design, la data analyse...</span>
         </p>
       </div>
     </div>
@@ -186,83 +186,110 @@ css: index
           <li>Pour le <strong>front-end</strong> (coté client): HTML5, CSS3, bootstrap3, jQuery, AngularJs</li>
           <li>Pour le <strong>e-marketing</strong> : Google Analytics, Adwords, Webmaster Tool; Bing Webmaster Tool</li>
         </ul>
-      </div>
 
-      <div class="row">
-        <div class="col-sm-6 real">
-          <a href="http://seminyak-villa.com/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
-            <div class="view view-first">
-              <img src="{{ "/image/seminyak-villa.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Seminyak-villa.com"/>
-              <div class="mask">
-                <h4>Seminyak-villa.com</h4>
-                <p>Site e-commerce - AngularJs, Symfony2 & ElasticSearch</p>
-                <div class="info">Voir</div>
+
+        <div class="row">
+          <div class="col-sm-6 real">
+            <a href="http://seminyak-villa.com/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
+              <div class="view view-first">
+                <img src="{{ "/image/seminyak-villa.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Seminyak-villa.com"/>
+                <div class="mask">
+                  <h4>Seminyak-villa.com</h4>
+                  <p>Site e-commerce - AngularJs, Symfony2 & ElasticSearch</p>
+                  <div class="info">Voir</div>
+                </div>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-sm-6 real">
-          <a href="http://yakside.com/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
-            <div class="view view-first">
-              <img src="{{ "/image/yakside.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="yakside.com"/>
-              <div class="mask">
-                <h4>Yakside.com</h4>
-                <p>Site vitrine - Bootstrap3, HTML5 & CSS3</p>
-                <div class="info">Voir</div>
+            </a>
+          </div>
+          <div class="col-sm-6 real">
+            <a href="http://guide.villa-bali.com/fr?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
+              <div class="view view-first">
+                <img src="{{ "/image/guide.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="guide.villa-bali.com"/>
+                <div class="mask">
+                  <h4>guide.villa-bali.com</h4>
+                  <p>Blog sur Bali - Symfony2 & Bootstrap3</p>
+                  <div class="info">Voir</div>
+                </div>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-sm-6 real">
-          <a href="http://numerologie-yvonne.com/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
-            <div class="view view-first">
-              <img src="{{ "/image/numerologie.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="numerologie-yvonne.com"/>
-              <div class="mask">
-                <h4>Numérologie-yvonne.com</h4>
-                <p>Site vitrine - Symfony2 & Bootstrap3</p>
-                <div class="info">Voir</div>
+            </a>
+          </div>
+          <div class="col-sm-6 real">
+            <a href="http://yakside.com/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
+              <div class="view view-first">
+                <img src="{{ "/image/yakside.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="yakside.com"/>
+                <div class="mask">
+                  <h4>Yakside.com</h4>
+                  <p>Site vitrine - Bootstrap3, HTML5 & CSS3</p>
+                  <div class="info">Voir</div>
+                </div>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-sm-6 real">
-          <a href="http://guide.villa-bali.com/fr?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
-            <div class="view view-first">
-              <img src="{{ "/image/guide.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="guide.villa-bali.com"/>
-              <div class="mask">
-                <h4>guide.villa-bali.com</h4>
-                <p>Blog sur Bali - Symfony2 & Bootstrap3</p>
-                <div class="info">Voir</div>
+            </a>
+          </div>
+          <div class="col-sm-6 real">
+            <a href="http://www.villa-finder.com/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
+              <div class="view view-first">
+                <img src="{{ "/image/finder.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="villa-finder.com"/>
+                <div class="mask">
+                  <h4>villa-finder.com</h4>
+                  <p>Site entreprise Villa-Finder - Jekyll</p>
+                  <div class="info">Voir</div>
+                </div>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-sm-6 real">
-          <a href="http://www.referencement-web.site/comparer-google-bing-interpretation-nofollow/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="follow" target="_blank">
-            <div class="view view-first">
-              <img src="{{ "/image/seo.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Référencement SEO"/>
-              <div class="mask">
-                <h4>Referencement-web.site</h4>
-                <p>Blog sur le SEO - Jekyll</p>
-                <div class="info">Voir</div>
+            </a>
+          </div>
+          <div class="col-sm-6 real">
+            <a href="http://nordfo.fr/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
+              <div class="view view-first">
+                <img src="{{ "/image/nordfo.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt=nordfo.fr/>
+                <div class="mask">
+                  <h4>Nord Fibre Optique</h4>
+                  <p>Site entreprise Nord Fibre Optique - Symfony2 & Bootstrap3</p>
+                  <div class="info">Voir</div>
+                </div>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-sm-6 real">
-          <a href="http://www.ocyo-consulting.com?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
-            <div class="view view-first">
-              <img src="{{ "/image/ocyo.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="OCYO Consulting"/>
-              <div class="mask">
-                <h4>OCYO-Consulting.com</h4>
-                <p>Site vitrine entreprise - Symfony2 & Bootstrap3</p>
-                <div class="info">Voir</div>
+            </a>
+          </div>
+          <div class="col-sm-6 real">
+            <a href="http://numerologie-yvonne.com/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
+              <div class="view view-first">
+                <img src="{{ "/image/numerologie.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="numerologie-yvonne.com"/>
+                <div class="mask">
+                  <h4>Numérologie-yvonne.com</h4>
+                  <p>Site vitrine - Symfony2 & Bootstrap3</p>
+                  <div class="info">Voir</div>
+                </div>
               </div>
-            </div>
-          </a>
+            </a>
+          </div>
+          <div class="col-sm-6 real">
+            <a href="http://www.referencement-web.site/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
+              <div class="view view-first">
+                <img src="{{ "/image/seo.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Référencement SEO"/>
+                <div class="mask">
+                  <h4>Referencement-web.site</h4>
+                  <p>Blog sur le SEO - Jekyll</p>
+                  <div class="info">Voir</div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-sm-6 real">
+            <a href="http://www.ocyo-consulting.com?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
+              <div class="view view-first">
+                <img src="{{ "/image/ocyo.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="OCYO Consulting"/>
+                <div class="mask">
+                  <h4>OCYO-Consulting.com</h4>
+                  <p>Site vitrine entreprise - Symfony2 & Bootstrap3</p>
+                  <div class="info">Voir</div>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
+        <img src="{{ "/image/max.gif" | prepend: site.baseurl }}" alt="Maxime Herbaut avatar" class="center-block avatar" width="200px">
       </div>
     </div>
+
 
     <div class="modal fade" id="myModal">
       <div class="modal-dialog">
