--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ css: index
       <p>Développeur web “full stack” en freelance dans le Nord,
         je suis à votre disposition pour vous aider dans la réalisation de vos projets.<span class="text-xs">
           J'allie front-end et back-end et suis également formé sur les aspects marketing:
-          tel que le référencement (SEO), l’ergonomie et le design, la data analyse...</span>
+          tel que le référencement (SEO), l’ergonomie et le design, l'analyse digitale...</span>
         </p>
       </div>
     </div>
@@ -146,13 +146,14 @@ css: index
             <div class="box-icon">
               <i class="fa fa-line-chart"></i>
             </div>
-            <p>Data analyse</p>
+            <p>Web analyse</p>
           </div>
           <div class="col-sm-9">
             <p>
               Le site sera livré lié à un compte <strong>Google Analytics, </strong>
               analyse des visites et de la fréquentation du site. Un plan de
-              tracking personnalisé peut également être prévu.
+              tracking personnalisé peut également être prévu. Certifié Google Analytics IQ
+              depuis Févier 2016.
             </p>
           </div>
         </div>
